--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "js-cookie": "^2.2.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
+    "react-bootstrap-icons": "^1.0.1-alpha3",
     "react-data-table-component": "^6.7.1",
     "react-datepicker": "^2.14.1",
     "react-dom": "^16.13.1",
+    "react-js-pagination": "^3.0.3",
     "react-media-recorder": "^1.2.0",
     "react-notifications-component": "^2.4.0",
     "react-router": "^5.1.2",
