--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "js-cookie": "^2.2.1",
+    "moment": "^2.24.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-bootstrap-icons": "^1.0.1-alpha3",
@@ -18,6 +19,7 @@
     "react-dom": "^16.13.1",
     "react-js-pagination": "^3.0.3",
     "react-media-recorder": "^1.2.0",
+    "react-moment": "^0.9.7",
     "react-notifications-component": "^2.4.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
